--- a/app/src/main/res/layout/main_detail2.xml
+++ b/app/src/main/res/layout/main_detail2.xml
@@ -5,6 +5,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="4dp">
+        <ImageView
+                android:id="@+id/iv_tab_left"
+                android:src="@drawable/tab_card_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <ImageView
+                android:id="@+id/iv_tab_right"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/tab_card_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
     <TextView
             android:id="@+id/main_detail2_title"
             android:layout_marginLeft="15dp"
