--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,8 +44,9 @@
                             android:layout_alignParentRight="true"
                             android:layout_alignParentEnd="true"
                             android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/skip_red_24dp"
+                            android:src="@drawable/bt_x"
                             app:backgroundTint="@android:color/white"
+                            android:elevation="20dp"
                             app:fabSize="auto"
                             app:rippleColor="#22ED7563"/>
 
@@ -63,8 +64,9 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/rewind_blue_24dp"
+                            android:src="@drawable/ic_num_1"
                             app:backgroundTint="@android:color/white"
+                            android:elevation="27dp"
                             app:fabSize="mini"
                             app:rippleColor="#225BC9FA"/>
 
@@ -87,8 +89,9 @@
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
                             android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/like_green_24dp"
+                            android:src="@drawable/bt_o"
                             app:backgroundTint="@android:color/white"
+                            android:elevation="20dp"
                             app:fabSize="auto"
                             app:rippleColor="#226FE2B3"/>
 
@@ -102,7 +105,7 @@
                     android:layout_height="match_parent"
                     android:layout_above="@+id/button_container"
                     android:padding="20dp"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="10dp"
                     android:clipToPadding="false"
                     android:clipChildren="false">
                 <com.yuyakaido.android.cardstackview.CardStackView
@@ -110,47 +113,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                 </com.yuyakaido.android.cardstackview.CardStackView>
-
-               <LinearLayout
-                       android:layout_marginTop="15dp"
-                       android:orientation="horizontal"
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent">
-                   <TextView
-                           android:layout_marginLeft="5dp"
-                           android:id="@+id/tv_card_top_left"
-                           android:background="#101010"
-                           android:layout_width="150dp"
-                           android:layout_height="15dp"/>
-                   <TextView
-                           android:layout_marginLeft="10dp"
-                           android:id="@+id/tv_card_top_right"
-                           android:background="#101010"
-                           android:layout_width="150dp"
-                           android:layout_height="15dp"/>
-               </LinearLayout>
-                <!--<com.yuyakaido.android.cardstackview.CardStackView-->
-                <!--android:posterIdx="@+posterIdx/cs_view_for_progress"-->
-                <!--android:layout_width="160dp"-->
-                <!--android:layout_height="match_parent">-->
-                <!--</com.yuyakaido.android.cardstackview.CardStackView>-->
-
-                <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="match_parent"-->
-                        <!--android:orientation="horizontal">-->
-                    <!--<View-->
-                            <!--android:posterIdx="@+posterIdx/pv_reverse"-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--android:layout_weight="1"/>-->
-
-                    <!--<View-->
-                            <!--android:posterIdx="@+posterIdx/pv_skip"-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--android:layout_weight="1"/>-->
-                <!--</LinearLayout>-->
 
             </RelativeLayout>
 
