--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,6 +17,7 @@
               android:layout_marginRight="11.8dp"
               android:orientation="horizontal">
     <ImageView
+            android:id="@+id/iv_rv_todo_category_color"
             android:src="@drawable/label_task_blue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
