--- a/app/src/main/res/layout/rv_item_calendar.xml
+++ b/app/src/main/res/layout/rv_item_calendar.xml
@@ -33,6 +33,7 @@
             android:singleLine="true"
             android:text="일정1"
             android:background="#ffffff"
+            android:textColor="#ffffff"
             android:textSize="12dp"/>
 
     <TextView
@@ -44,6 +45,7 @@
             android:singleLine="true"
             android:text="일정1"
             android:background="#ffffff"
+            android:textColor="#ffffff"
             android:textSize="12dp"/>
 
     <TextView
@@ -55,6 +57,7 @@
             android:singleLine="true"
             android:text="일정1"
             android:background="#ffffff"
+            android:textColor="#ffffff"
             android:textSize="12dp"/>
     <TextView
             android:id="@+id/numbering5"
@@ -65,6 +68,7 @@
             android:singleLine="true"
             android:text="일정1"
             android:background="#ffffff"
+            android:textColor="#ffffff"
             android:textSize="12dp"/>
 
 
