--- a/app/src/main/res/layout/activity_award_detail.xml
+++ b/app/src/main/res/layout/activity_award_detail.xml
@@ -19,6 +19,7 @@
                 android:layout_height="56dp"/>
 
             <ImageView
+                    android:id="@+id/btn_award_close"
                 android:paddingVertical="16dp"
                 android:paddingHorizontal="16dp"
                 android:src="@drawable/ic_x_close"
@@ -61,7 +62,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true">
                         <EditText
-                            android:id="@+id/et_certificate_title"
+                            android:id="@+id/et_award_title"
                             android:letterSpacing="-0.02"
                             android:textColor="#000"
                             android:textStyle="normal"
@@ -124,7 +125,7 @@
                             android:paddingVertical="10dp"
                             android:paddingHorizontal="10dp"
                             android:background="@drawable/edit_text_line"
-                            android:id="@+id/et_certificate_note"
+                            android:id="@+id/et_award_note"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:lines="5"
