--- a/app/src/main/res/layout/activity_license_detail.xml
+++ b/app/src/main/res/layout/activity_license_detail.xml
@@ -19,6 +19,7 @@
                     android:layout_height="56dp"/>
 
             <ImageView
+                    android:id="@+id/btn_certificate_close"
                     android:paddingVertical="16dp"
                     android:paddingHorizontal="16dp"
                     android:src="@drawable/ic_x_close"
@@ -80,6 +81,7 @@
                                 android:layout_height="wrap_content">
 
                             <TextView
+                                    android:id="@+id/license_date"
                                     android:letterSpacing="-0.02"
                                     android:textColor="#425ee5"
                                     android:fontFamily="sans-serif-medium"
@@ -87,17 +89,59 @@
                                     android:text="취득연도"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"/>
-                            <TextView
-                                    android:layout_alignParentRight="true"
-                                    android:id="@+id/tv_license_date"
+                            <EditText
+                                    android:inputType="number"
+                                    android:maxLength="4"
+                                    android:id="@+id/et_license_year"
+                                    android:layout_toStartOf="@+id/tv_license_year"
+                                    android:hint="YYYY"
+                                    android:backgroundTint="#e0e0e0"
                                     android:letterSpacing="-0.01"
                                     android:textColor="#000"
                                     android:textStyle="normal"
                                     android:fontFamily="sans-serif"
                                     android:textSize="18sp"
-                                    android:text="2019년 01월"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"/>
+                            <TextView
+                                    android:layout_centerVertical="true"
+                                    android:layout_toStartOf="@+id/et_license_month"
+                                    android:layout_marginRight="2dp"
+                                    android:id="@+id/tv_license_year"
+                                    android:letterSpacing="-0.01"
+                                    android:textColor="#000"
+                                    android:textStyle="normal"
+                                    android:fontFamily="sans-serif"
+                                    android:textSize="18sp"
+                                    android:text="년"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
+                            <EditText
+                                    android:inputType="number"
+                                    android:maxLength="2"
+                                    android:id="@+id/et_license_month"
+                                    android:hint="MM"
+                                    android:layout_toStartOf="@+id/tv_license_month"
+                                    android:backgroundTint="#e0e0e0"
+                                    android:letterSpacing="-0.01"
+                                    android:textColor="#000"
+                                    android:textStyle="normal"
+                                    android:fontFamily="sans-serif"
+                                    android:textSize="18sp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                            <TextView
+                                    android:id="@+id/tv_license_month"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true"
+                                    android:letterSpacing="-0.01"
+                                    android:textColor="#000"
+                                    android:textStyle="normal"
+                                    android:fontFamily="sans-serif"
+                                    android:textSize="18sp"
+                                    android:text="월"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content" />
 
 
                         </RelativeLayout>
@@ -137,7 +181,7 @@
                 </RelativeLayout>
 
                 <ImageView
-                        android:id="@+id/btn_schedule_save"
+                        android:id="@+id/btn_license_save"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="30dp"
                         android:layout_marginTop="16dp"
