--- a/app/src/main/res/layout/fragment_career3.xml
+++ b/app/src/main/res/layout/fragment_career3.xml
@@ -38,6 +38,31 @@
         </RelativeLayout>
 
     </RelativeLayout>
+    <RelativeLayout
+            android:id="@+id/rl_empty_license"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/activity_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <ImageView
+                android:layout_marginTop="85dp"
+                android:id="@+id/iv_empty_career"
+                android:src="@drawable/img_empty_career"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <TextView
+                android:gravity="center"
+                android:lineSpacingExtra="9sp"
+                android:textColor="#b2b2b2"
+                android:textSize="18sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="36dp"
+                android:layout_below="@+id/iv_empty_career"
+                android:text="내가 가진 자격증을\n기록해보세요!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/activity_top"
