--- a/app/src/main/res/layout/item_spot.xml
+++ b/app/src/main/res/layout/item_spot.xml
@@ -12,7 +12,6 @@
         app:cardCornerRadius="8dp"
         app:cardBackgroundColor="@android:color/white">
 
-
     <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/item_image"
             android:layout_width="match_parent"
@@ -52,50 +51,62 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
         <LinearLayout
-                android:id="@+id/ll_detail1_background"
                 android:background="#ffffff"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <RelativeLayout
+            <LinearLayout
+                    android:id="@+id/ll_detail1_top_content"
+                    android:background="#FFF"
+                    android:layout_marginBottom="22dp"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="4dp">
-                <ImageView
-                        android:id="@+id/iv_tab_left_1"
-                        android:src="@drawable/tab_card_left"
+                    android:layout_height="wrap_content">
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp">
+                    <ImageView
+                            android:id="@+id/iv_tab_left_1"
+                            android:src="@drawable/tab_card_left"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:scaleType="fitXY"
+                            android:layout_height="wrap_content"/>
+                    <ImageView
+                            android:id="@+id/iv_tab_right_1"
+                            android:src="@drawable/tab_card_right"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:scaleType="fitXY"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <TextView
+                        android:id="@+id/main_detail1_title"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="30dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                <ImageView
-                        android:id="@+id/iv_tab_right_1"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/tab_card_right"
+                        android:layout_height="wrap_content"
+                        android:textSize="24sp"
+                        android:fontFamily="sans-serif"
+                        android:textStyle="bold"
+                        android:textColor="#474747"
+                        android:letterSpacing="-0.02"
+                        android:text="IT 벤처 창업 동아리 SOPT"
+                />
+                <TextView
+                        android:id="@+id/main_detail1_hash"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </RelativeLayout>
-            <TextView
-                    android:id="@+id/main_detail1_title"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:fontFamily="sans-serif"
-                    android:textStyle="bold"
-                    android:textColor="#474747"
-                    android:letterSpacing="-0.02"
-                    android:text="IT 벤처 창업 동아리 SOPT"
-            />
-            <TextView
-                    android:id="@+id/main_detail1_hash"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
+                        android:layout_height="wrap_content"
+                        android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
 
+            </LinearLayout>
 
             <RelativeLayout
                     android:layout_marginTop="22dp"
@@ -273,49 +284,61 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
-                android:id="@+id/ll_detail2_background"
                 android:background="#ffffff"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp">
-                <ImageView
-                        android:id="@+id/iv_tab_left_2"
-                        android:src="@drawable/tab_card_left"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                <ImageView
-                        android:id="@+id/iv_tab_right_2"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/tab_card_right"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </RelativeLayout>
-            <TextView
-                    android:id="@+id/main_detail2_title"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:fontFamily="sans-serif"
-                    android:textStyle="bold"
-                    android:textColor="#474747"
-                    android:letterSpacing="-0.02"
-                    android:text="IT 벤처 창업 동아리 SOPT"
-            />
-            <TextView
-                    android:id="@+id/main_detail2_hash"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
 
+            <LinearLayout
+                    android:id="@+id/ll_detail2_top_content"
+                    android:background="#FFF"
+                    android:layout_marginBottom="22dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp">
+                    <ImageView
+                            android:id="@+id/iv_tab_left_2"
+                            android:src="@drawable/tab_card_left"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:scaleType="fitXY"
+                            android:layout_height="wrap_content"/>
+                    <ImageView
+                            android:id="@+id/iv_tab_right_2"
+                            android:layout_alignParentRight="true"
+                            android:src="@drawable/tab_card_right"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:scaleType="fitXY"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <TextView
+                        android:id="@+id/main_detail2_title"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24sp"
+                        android:fontFamily="sans-serif"
+                        android:textStyle="bold"
+                        android:textColor="#474747"
+                        android:letterSpacing="-0.02"
+                        android:text="IT 벤처 창업 동아리 SOPT"
+                />
+                <TextView
+                        android:id="@+id/main_detail2_hash"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
+            </LinearLayout>
 
             <RelativeLayout
                     android:layout_marginTop="22dp"
@@ -539,49 +562,57 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
-                android:id="@+id/ll_detail3_background"
                 android:background="#ffffff"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp">
-                <ImageView
-                        android:id="@+id/iv_tab_left_3"
-                        android:src="@drawable/tab_card_left"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                <ImageView
-                        android:id="@+id/iv_tab_right_3"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/tab_card_right"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </RelativeLayout>
-            <TextView
-                    android:id="@+id/main_detail3_title"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:fontFamily="sans-serif"
-                    android:textStyle="bold"
-                    android:textColor="#474747"
-                    android:letterSpacing="-0.02"
-                    android:text="IT 벤처 창업 동아리 SOPT"
-            />
-            <TextView
-                    android:id="@+id/main_detail3_hash"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
 
+            <LinearLayout
+                    android:id="@+id/ll_detail3_top_content"
+                    android:background="#FFF"
+                    android:layout_marginBottom="22dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp">
+                    <ImageView
+                            android:id="@+id/iv_tab_left_3"
+                            android:src="@drawable/tab_card_left"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                    <ImageView
+                            android:id="@+id/iv_tab_right_3"
+                            android:layout_alignParentRight="true"
+                            android:src="@drawable/tab_card_right"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <TextView
+                        android:id="@+id/main_detail3_title"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24sp"
+                        android:fontFamily="sans-serif"
+                        android:textStyle="bold"
+                        android:textColor="#474747"
+                        android:letterSpacing="-0.02"
+                        android:text="IT 벤처 창업 동아리 SOPT"
+                />
+                <TextView
+                        android:id="@+id/main_detail3_hash"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="#기획/아이디어 #디자인 #IT/기술 #창업/스타트업"/>
+            </LinearLayout>
             <RelativeLayout
                     android:layout_marginTop="22dp"
                     android:layout_width="match_parent"
@@ -845,13 +876,12 @@
             android:layout_height="match_parent">
         <LinearLayout
                 android:id="@+id/ll_detail4_background"
-                android:background="#ffffff"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <RelativeLayout
-                    android:layout_marginTop="114dp"
+                    android:layout_marginTop="104dp"
                     android:layout_width="match_parent"
                     android:layout_height="126dp">
                 <ImageView
