--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,97 +18,50 @@
                 android:layout_height="match_parent"
                 android:clipChildren="false">
 
-            <LinearLayout
+            <RelativeLayout
                     android:id="@+id/button_container"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:paddingBottom="12dp"
+                    android:layout_marginBottom="20dp"
                     android:clipChildren="false"
                     android:clipToPadding="false">
 
-                <RelativeLayout
-                        android:orientation="horizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:paddingRight="16dp"
-                        android:paddingEnd="16dp"
-                        android:clipToPadding="false">
+                <ImageView
+                        android:layout_centerVertical="true"
+                        android:id="@+id/btn_x"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/btn_number"
+                        android:layout_marginRight="18dp"
+                        android:src="@drawable/bt_x"/>
+                <ImageView
+                        android:layout_centerVertical="true"
+                        android:id="@+id/btn_number"
+                        android:layout_centerInParent="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_count"/>
+                <ImageView
+                        android:layout_centerVertical="true"
+                        android:id="@+id/btn_o"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/bt_o"
+                        android:layout_marginLeft="18dp"
+                        android:layout_toEndOf="@id/btn_number"/>
 
-                    <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/skip_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_alignParentEnd="true"
-                            android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/bt_x"
-                            app:backgroundTint="@android:color/white"
-                            android:elevation="20dp"
-                            app:fabSize="auto"
-                            app:rippleColor="#22ED7563"/>
 
-                </RelativeLayout>
-
-                <RelativeLayout
-                        android:orientation="horizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                    <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/rewind_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/ic_num_1"
-                            app:backgroundTint="@android:color/white"
-                            android:elevation="27dp"
-                            app:fabSize="mini"
-                            app:rippleColor="#225BC9FA"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                        android:orientation="horizontal"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:paddingLeft="16dp"
-                        android:paddingStart="16dp"
-                        android:clipToPadding="false">
-
-                    <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/like_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true"
-                            android:hapticFeedbackEnabled="true"
-                            android:src="@drawable/bt_o"
-                            app:backgroundTint="@android:color/white"
-                            android:elevation="20dp"
-                            app:fabSize="auto"
-                            app:rippleColor="#226FE2B3"/>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
+            </RelativeLayout>
 
             <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/button_container"
                     android:padding="20dp"
-                    android:layout_marginTop="10dp"
                     android:clipToPadding="false"
                     android:clipChildren="false">
+
                 <com.yuyakaido.android.cardstackview.CardStackView
                         android:id="@+id/card_stack_view"
                         android:layout_width="match_parent"
@@ -119,5 +73,6 @@
         </RelativeLayout>
 
     </LinearLayout>
+
 
 </android.support.v4.widget.DrawerLayout>
