--- a/app/src/main/res/layout/item_spot.xml
+++ b/app/src/main/res/layout/item_spot.xml
@@ -17,13 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:layout_marginTop="100dp"
             app:riv_corner_radius="8dp"/>
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_height="100dp"
+            android:layout_gravity="top"
             android:padding="16dp">
 
         <TextView
@@ -31,16 +32,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="@android:color/white"
-                android:textSize="26sp"/>
+                android:textSize="29sp"/>
 
         <TextView
                 android:id="@+id/item_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"/>
+                android:textSize="17sp"/>
 
     </LinearLayout>
 
