--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -60,11 +60,7 @@
                 android:textColor="#8b8b8b"
                 android:text="HDC 아이콘트롤스 조명 공모전"/>
     </LinearLayout>
-    <ImageView
-            android:layout_marginVertical="8.7dp"
-            android:background="#e0e0e0"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"/>
+
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -80,7 +76,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
                 android:layout_weight="2"
-                android:text="5"
+                android:text=""
                 android:fontFamily="sans-serif-medium"
                 android:textColor="#000000"
                 android:letterSpacing="-0.02"
@@ -95,7 +91,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
-                android:text="일 남음"
+                android:text=""
                 android:fontFamily="sans-serif"
                 android:textColor="#868686"
                 android:letterSpacing="-0.02"
